fix safari blog overflow

--- a/static/src/scss/_pages/_Page-blog.scss
+++ b/static/src/scss/_pages/_Page-blog.scss
@@ -1,5 +1,5 @@
 html {
-    overflow-x: hidden; 
+    overflow: hidden; 
 }
 .blog-site {
 
